--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,188 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+body {
+  background-color: black;
+}
+
+a {
+  color: red;
+  text-decoration: none;
+}
+
+.container {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  width: 400%;
+  height: 10%;
+}
+
+.left-section,
+.center-section,
+.right-section {
+  width: 30%;
+}
+
+.center-section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.center-section-top {
+  margin-bottom: 0px;
+}
+
+.login-section {
+.container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 1440px;
+  height: 1024px;
+  background-color: #FFFFFF;
+}
+
+.left-section {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  background-color: white;
+  width: 999px;
+  height: 1024px;
+}
+
+.color-item {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  margin-bottom: 0px;
+}
+
+.color-icon {
+  width: 20px;
+  height: 20px; 
+  margin-right: 0px; 
+}
+
+.color-text {
+  display: flex;
+  flex-direction: column;
+}
+
+.center-section {
+  text-align: center;
+  align-items: flex-start;
+}
+
+.right-section {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  background-color: white;
+}
+}
+
+.signin-section {
+  .sign-in-container {
+    width: 999px;
+    height: 1024px;
+    background-color: white;
+  }
+  .header {
+    text-align: center;
+  }
+
+  .form {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .input-field {
+    width: 800px;
+    height: 10px;
+    padding: 20px 10px;
+    border-radius: 8px;
+    background-color: #EBE9E9;
+    gap: 10px;
+  }
+
+  .login-button {
+    width: 800px;
+    height: 50px;
+    border-radius: 8px;
+    background-color: #2ACFCF;
+    color: white;
+  }
+
+
+}
+
+.signup-section {
+
+  .sign-up-container {
+    width: 999px;
+    height: 1024px;
+    background-color: white;
+  }
+
+  .header {
+    text-align: center;
+  }
+
+  .form {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .input-field {
+    width: 800px;
+    height: 50px;
+    border-radius: 8px;
+    background-color: #EBE9E9;
+    gap: 10px;
+  }
+
+  .login-button {
+    width: 800px;
+    height: 50px;
+    border-radius: 8px;
+    background-color: #2ACFCF;
+    color: white;
+  }
+
+}
+
+.password-section {
+.password-container {
+  width: 999px;
+  height: 1024px;
+  background-color: white;
+}
+
+.header {
   text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.form {
+  display: flex;
+  flex-direction: column;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.input-field {
+  width: 800px;
+  height: 50px;
+  border-radius: 8px;
+  background-color: #EBE9E9;
+  gap: 10px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.login-button {
+  width: 800px;
+  height: 50px;
+  border-radius: 8px;
+  background-color: #2ACFCF;
+  color: white;
 }
 
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
 }
